﻿svs 10.03.2014 22:56:53 +0400 - build 3829

1. SQLite 3.8.4

drkns 10.03.2014 19:37:56 +0200 - build 3828

1. Ключ "/rw" переименован в "/ro-".

2. После 3821 debug build детектировал ложную утечку памяти. Лучше избегать глобальных std-объектов.

3. Расставляем NonCopyable, избавляемся от некоторых глобальных объектов и прочий рефакторинг.

drkns 10.03.2014 01:28:52 +0200 - build 3827

1. Ещё пара оптимизаций отрисовки.

drkns 10.03.2014 01:08:07 +0200 - build 3826

1. Очень старый баг, внесённый ещё в 2.0.1077.
   В некоторых случаях оптимизация работала не так, как ожидалось, и становилось в разы медленнее.

shmuel 09.03.2014 15:08:27 +0200 - build 3825

1. Из форума: DI_FIXEDIT + DIF_HISTORY для строк больше двух символов.
   (Наличие флага DIF_HISTORY позволяло ввести на 1 символ больше, чем длина поля ввода).

shmuel 08.03.2014 23:07:41 +0200 - build 3824

1. Из форума: Неверный результат работы FSF.TruncStr().

zg 08.03.2014 18:40:47 +0200 - build 3823

1. уточнение 3821. для DM_GETFOCUS и DM_LISTADDSTR в случае отсутствия диалога возвращается -1.

drkns 07.03.2014 02:38:36 +0200 - build 3822

1. VC10 fix.

2. Warning.

zg 07.03.2014 02:13:56 +0200 - build 3821

1. 0002614: SendDlgMessage: не падать при невалидном hDlg.

drkns 05.03.2014 22:41:01 +0200 - build 3820

1. 0002604: Translate in file menu Add, Subtract, Multiply...

drkns 04.03.2014 01:22:32 +0200 - build 3819

1. С форума: преобразование длинных имен в короткие не работало для имен длиннее 255 символов.

2. Рефакторинг.

shmuel 02.03.2014 09:53:50 +0200 - build 3818

1. Кастомная сортировка в панелях: индикатор сортировки в некоторых ситуациях не устанавливался на пустой панели.

shmuel 21.02.2014 18:11:56 +0200 - build 3817

1. M#0002607. Ещё одно уточнение.

svs 21.02.2014 08:05:46 +0400 - build 3816

1. Mantis#0002607. Уточнение.
   DM_SETITEMPOSITION вернёт false, если координаты заданы неверно.

svs 20.02.2014 21:33:03 +0400 - build 3815
