@@ -1,4 +1,15 @@
-﻿svs 10.03.2014 22:56:53 +0400 - build 3829
+﻿svs 11.03.2014 10:24:41 +0400 - build 3830
+
+1. Bug: Некорректно отрабатывает запуск с панелей файлов, содержащих в начале имени символ '@'.
+   Например, "@@@@howl_by_tomape.jpg" в процессе прохода по внутренним функциям превращается в "@@@howl_by_tomape.jpg"
+   Т.е. символ "@" в начале строки воспринимается как признак тихого режима, потом усекается на -1 символ.
+
+   Ныне: Enter на элементе файловой панели пропускает механизм определения символа '@' в начале имени.
+         Если в ком.строке '@@@@howl_by_tomape.jpg' - будет выдано предупреждение, что файла "@@@howl_by_tomape.jpg" нет.
+         Если в ком.строке '"@@@@howl_by_tomape.jpg"' (имя в кавычках) - будет запущен файл '@@@@howl_by_tomape.jpg'.
+
+
+svs 10.03.2014 22:56:53 +0400 - build 3829
 
 1. SQLite 3.8.4
 
